--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -4,6 +4,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Visualization of Delays in Trajectories"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[1103, 800]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -32,7 +35,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="trajectoryPlotPanel" max="32767" attributes="0"/>
+                  <Component id="trajectoryPlotPanel" pref="720" max="32767" attributes="0"/>
                   <Component id="normalizedDelayPanel" max="32767" attributes="0"/>
                   <Component id="delayInUnitPanel" max="32767" attributes="0"/>
               </Group>
@@ -42,7 +45,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Component id="trajectoryPlotPanel" max="32767" attributes="0"/>
+              <Component id="trajectoryPlotPanel" pref="338" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="normalizedDelayPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -230,7 +233,7 @@
           </Border>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[626, 300]"/>
+          <Dimension value="[800, 600]"/>
         </Property>
       </Properties>
 
