--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -36,8 +36,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="trajectoryPlotPanel" pref="720" max="32767" attributes="0"/>
-                  <Component id="normalizedDelayPanel" max="32767" attributes="0"/>
-                  <Component id="delayInUnitPanel" max="32767" attributes="0"/>
+                  <Component id="distancePanel" max="32767" attributes="0"/>
+                  <Component id="delayPanel" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -47,9 +47,9 @@
           <Group type="102" attributes="0">
               <Component id="trajectoryPlotPanel" pref="338" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="normalizedDelayPanel" min="-2" max="-2" attributes="0"/>
+              <Component id="distancePanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="delayInUnitPanel" min="-2" max="-2" attributes="0"/>
+              <Component id="delayPanel" min="-2" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <Component id="sliderPanel" min="-2" max="-2" attributes="0"/>
@@ -250,11 +250,11 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
     </Container>
-    <Container class="javax.swing.JPanel" name="normalizedDelayPanel">
+    <Container class="javax.swing.JPanel" name="distancePanel">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Delay Plot (Normalized)"/>
+            <TitledBorder title="Distance Plot"/>
           </Border>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -264,11 +264,11 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
     </Container>
-    <Container class="javax.swing.JPanel" name="delayInUnitPanel">
+    <Container class="javax.swing.JPanel" name="delayPanel">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Delay Plot (in Unit)"/>
+            <TitledBorder title="Delay Plot"/>
           </Border>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
