--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -195,7 +195,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jLabel1">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Delay in"/>
+                        <Property name="text" type="java.lang.String" value="Distance Norm"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JComboBox" name="distanceComboBox">
@@ -216,7 +216,7 @@
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel2">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Delay in Unit"/>
+                        <Property name="text" type="java.lang.String" value="Type Delay Space"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JComboBox" name="unitComboBox">
