--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -208,6 +208,7 @@
                           </StringArray>
                         </Property>
                         <Property name="selectedIndex" type="int" value="1"/>
+                        <Property name="toolTipText" type="java.lang.String" value=""/>
                       </Properties>
                       <Events>
                         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="distanceNormComboBoxItemStateChanged"/>
