--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -283,10 +283,11 @@
                     <Component class="javax.swing.JComboBox" name="delaySpaceComboBox">
                       <Properties>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="3">
+                          <StringArray count="4">
                             <StringItem index="0" value="Usual Distance"/>
                             <StringItem index="1" value="Directional Distance"/>
                             <StringItem index="2" value="Dynamic Interaction"/>
+                            <StringItem index="3" value="Heading"/>
                           </StringArray>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" value=""/>
