--- a/src/visualization/AnalyticsDelayUI.form
+++ b/src/visualization/AnalyticsDelayUI.form
@@ -239,7 +239,7 @@
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                           <StringArray count="2">
                             <StringItem index="0" value="seconds"/>
-                            <StringItem index="1" value="milliseconds"/>
+                            <StringItem index="1" value="Hertz"/>
                           </StringArray>
                         </Property>
                       </Properties>
